--- a/index.html
+++ b/index.html
@@ -1,11 +1,29 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Hello, World!</title>
+    <title>Example Page</title>
   </head>
   <body>
-    <h1>Welcome to my website!</h1>
-    <p>This is a simple example of an HTML webpage.</p>
+    <h1>Select an Option:</h1>
+    <form>
+      <label for="option1">Option 1:</label>
+      <input type="radio" id="option1" name="option" value="option1">
+
+      <label for="option2">Option 2:</label>
+      <input type="radio" id="option2" name="option" value="option2">
+
+      <label for="option3">Option 3:</label>
+      <input type="radio" id="option3" name="option" value="option3">
+      
+      <button type="submit" onclick="execute()">Execute</button>
+    </form>
+
+    <script>
+      function execute() {
+        const selectedOption = document.querySelector('input[name="option"]:checked').value;
+        console.log(`Selected option: ${selectedOption}`);
+      }
+    </script>
   </body>
 </html>
 
